variables.Variables.scala.code
var nbPas: Int =0
var dejaFait: Int =0
while (!estSurBiscuit) {
  forward();
  nbPas = nbPas + 1 
}
prendreBiscuit();
while (nbPas != dejaFait) {
  backward();
}